fix close without write bug; refactor localkey, combine invalid segment;write gcfile after localkey; add client_define.h; see http://rb.corp.taobao.com/r/9053/
git-svn-id: http://code.taobao.org/svn/tfs@191 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-dev-1.3.2/src/common/Makefile.am
+++ b/branches/tfs-dev-1.3.2/src/common/Makefile.am
@@ -17,4 +17,4 @@ libtfscommon_a_SOURCES = config.cpp parameter.cpp func.cpp file_queue.cpp \
 			 define.h interval.h error_msg.h config_item.h \
 			 file_op.h statistics.h atomic.h
 
-include_HEADERS = define.h
+include_HEADERS = define.h client_define.h
