--- a/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
+++ b/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
@@ -21,10 +21,6 @@ libnamemetaserver_a_SOURCES=meta_server_service.cpp meta_store_manager.cpp \
 			    database_helper.cpp mysql_database_helper.cpp database_pool.cpp \
 					mem_helper.cpp meta_cache_helper.cpp meta_cache_info.cpp
 
-bin_PROGRAMS = metaserver test test_pool
+bin_PROGRAMS = metaserver
 
 metaserver_SOURCES=$(libnamemetaserver_a_SOURCES) main.cpp
-
-test_SOURCES=$(libnamemetaserver_a_SOURCES) test.cpp
-
-test_pool_SOURCES=$(libnamemetaserver_a_SOURCES) test_pool.cpp
