remove lru test from Makefile.am
git-svn-id: http://code.taobao.org/svn/tfs@785 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-dev-1.4.2/tests/rootserver/Makefile.am
+++ b/branches/tfs-dev-1.4.2/tests/rootserver/Makefile.am
@@ -13,14 +13,10 @@ LDADD=$(top_builddir)/src/rootserver/librootserver.a \
       $(TBLIB_ROOT)/lib/libtbsys.a
 
 
-noinst_PROGRAMS= build_table_test meta_server_manger_test test_lru
+noinst_PROGRAMS= build_table_test meta_server_manger_test
 
 build_table_test_SOURCES=build_table_test.cpp
 build_table_test_LDFLAGS=${AM_LDFLAGS} -static-libgcc -lgtest
 
 meta_server_manger_test_SOURCES=meta_server_manger_test.cpp
 meta_server_manger_test_LDFLAGS=${AM_LDFLAGS} -static-libgcc -lgtest
-
-
-test_lru_SOURCES=test_lru.cpp
-test_lru_LDFLAGS=${AM_LDFLAGS} -static-libgcc -lgtest
