move meta_hash_helper to common
git-svn-id: http://code.taobao.org/svn/tfs@787 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
+++ b/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
@@ -15,7 +15,7 @@ noinst_LIBRARIES=libnamemetaserver.a
 
 metaserver_INCLUDE=database_helper.h mem_helper.h meta_cache_info.h meta_server_service.h\
 									mysql_database_helper.h database_pool.h meta_cache_helper.h \
-									meta_hash_helper.h meta_store_manager.h lru.h
+									meta_store_manager.h lru.h
 
 libnamemetaserver_a_SOURCES=meta_server_service.cpp meta_store_manager.cpp \
 			    database_helper.cpp mysql_database_helper.cpp database_pool.cpp \
