add tfsunlinked_file_list.txt generation
git-svn-id: http://code.taobao.org/svn/tfs@837 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-test/tfsControlPress/test_tfs.conf
+++ b/branches/tfs-test/tfsControlPress/test_tfs.conf
@@ -4,7 +4,7 @@ time_interval = 100
 seedSetMode = 1
 writeFileSize = 1
 writeDelayTime = 0
-ns_ip = 10.232.36.208:8800
+ns_ip = 10.232.4.235:8100
 #ns_ip = 10.232.4.235:8100
 #ns_ip = 10.232.4.235:8100 
 #writeDelayTime = 5000000
@@ -16,6 +16,7 @@ segmentSize = 2097152
 [tfsunlink]
 loop_flag = 0
 filelist_name = tfsseed_file_list.txt
+unlinkedlist_name = tfsunlinked_file_list.txt
 largeFlag = 0
 
 [tfsread]
