--- a/branches/tfs-dev-1.4.2/src/message/Makefile.am
+++ b/branches/tfs-dev-1.4.2/src/message/Makefile.am
@@ -14,7 +14,9 @@ HEADER=dump_plan_message.h client_cmd_message.h heart_message.h\
 			 close_file_message.h read_data_message.h write_data_message.h\
 			 block_info_message.h admin_cmd_message.h rc_session_message.h\
 			 message_factory.h get_dataserver_information_message.h\
-			 meta_nameserver_client_message.h meta_nameserver_client_message.h
+			 meta_nameserver_client_message.h meta_nameserver_client_message.h\
+			 rts_ms_heart_message.h get_tables_from_rts_message.h\
+			 update_table_message.h
 libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_message.cpp\
 													oplog_sync_message.cpp crc_error_message.cpp reload_message.cpp\
 													unlink_file_message.cpp file_info_message.cpp rollback_message.cpp\
@@ -23,7 +25,8 @@ libtfsmessage_a_SOURCES = dump_plan_message.cpp client_cmd_message.cpp heart_mes
 													close_file_message.cpp read_data_message.cpp write_data_message.cpp\
 													block_info_message.cpp admin_cmd_message.cpp rc_session_message.cpp\
 													message_factory.cpp get_dataserver_information_message.cpp \
-													meta_nameserver_client_message.cpp $(HEADER)
+													meta_nameserver_client_message.cpp rts_ms_heart_message.cpp\
+													get_tables_from_rts_message.cpp update_table_message.cpp $(HEADER)
 
 libtfsmessage_a_CPPFLAGS = $(AM_CPPFLAGS)
 
