--- a/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
+++ b/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
@@ -13,14 +13,15 @@ LDADD=$(top_builddir)/src/message/libtfsmessage.a \
 
 noinst_LIBRARIES=libnamemetaserver.a
 
-metaserver_INCLUDE=database_helper.h mem_helper.h meta_cache_info.h meta_server_service.h\
-									mysql_database_helper.h database_pool.h meta_cache_helper.h \
-									meta_store_manager.h lru.h
+metaserver_INCLUDE=database_helper.h  meta_server_service.h meta_bucket_manager.h\
+									mysql_database_helper.h database_pool.h meta_store_manager.h\
+									meta_heart_manager.h
 
 libnamemetaserver_a_SOURCES=meta_server_service.cpp meta_store_manager.cpp \
 			    database_helper.cpp mysql_database_helper.cpp database_pool.cpp \
-					mem_helper.cpp meta_cache_helper.cpp meta_cache_info.cpp
+					mem_helper.cpp meta_cache_helper.cpp meta_cache_info.cpp meta_bucket_manager.cpp\
+					meta_heart_manager.cpp
 
-bin_PROGRAMS = metaserver
+bin_PROGRAMS = metaserver 
 
 metaserver_SOURCES=$(libnamemetaserver_a_SOURCES) main.cpp
