add rs.xml rsdep.sh RootServer
git-svn-id: http://code.taobao.org/svn/tfs@878 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-dev-1.4.2/scripts/ha/Makefile.am
+++ b/branches/tfs-dev-1.4.2/scripts/ha/Makefile.am
@@ -1,5 +1,5 @@
 pkgdata_datadir=${prefix}/scripts/ha
-pkgdata_data_DATA=authkeys.sh deploy.sh ha.cf NameServer nsdep.sh ns.xml
+pkgdata_data_DATA=authkeys.sh deploy.sh ha.cf NameServer nsdep.sh ns.xml rs.xml
 
 install-data-hook:
 	mv ${DESTDIR}/${prefix}/scripts/ha/authkeys.sh ${DESTDIR}/${prefix}/scripts/ha/authkeys
@@ -8,4 +8,6 @@ install-data-hook:
 	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/authkeys
 	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/deploy
 	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/nsdep
+	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/rsdep
 	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/NameServer
+	chmod u+x ${DESTDIR}/${prefix}/scripts/ha/RootServer
