--- a/branches/tfs-dev-1.3.2/src/tools/dataserver/Makefile.am
+++ b/branches/tfs-dev-1.3.2/src/tools/dataserver/Makefile.am
@@ -8,7 +8,9 @@ AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB)
 bin_PROGRAMS = clear_file_system\
                ds_client\
                format_file_system\
-               read_super_block
+               read_super_block\
+               filequeue_rename\
+               recover_disk_data_to_cluster
 
 
 noinst_PROGRAMS = convert_name\
@@ -26,7 +28,7 @@ COMMONLIB = $(top_builddir)/src/message/libtfsmessage.a\
             $(TBLIB_ROOT)/lib/libtbnet.a\
             $(TBLIB_ROOT)/lib/libtbsys.a
 
-LDADD = $(top_builddir)/src/client/.libs/libtfsclient.a\
+LDADD = $(top_builddir)/src/new_client/.libs/libtfsclient.a\
         $(COMMONLIB)
 
 clear_file_system_SOURCES = clear_file_system.cpp
@@ -54,3 +56,7 @@ read_index_tool_SOURCES = read_index_tool.cpp
 view_local_key_LDADD = $(top_builddir)/src/new_client/.libs/libtfsclient.a\
                        $(COMMONLIB)
 view_local_key_SOURCES = view_local_key.cpp
+
+filequeue_rename_SOURCES = filequeue_rename.cpp
+
+recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
