--- a/branches/tfs-dev-1.4.2/conf/meta.conf
+++ b/branches/tfs-dev-1.4.2/conf/meta.conf
@@ -12,3 +12,10 @@ port = 11111
 [metaserver]
 meta_db_infos = 10.11.12.12:1234:tfs_name_db,root,root;10.11.12.12:1234:tfs_name_db,root,root
 max_spool_size = 10
+gc_ratio = 0.1
+max_cache_size = 1024
+max_mutex_size = 32
+free_list_count = 256
+max_sub_dirs_count = 100
+max_sub_files_count = 1000
+max_sub_dirs_deep = 10
