--- a/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
+++ b/branches/tfs-dev-1.4.2/src/name_meta_server/Makefile.am
@@ -1,6 +1,7 @@
 AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
-            -I$(TBLIB_ROOT)/include/tbnet
+            -I$(TBLIB_ROOT)/include/tbnet \
+						$(MYSQL_CFLAGS)
 
 AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid
 
