--- a/branches/tfs-test/nameMetaOper/pom.xml
+++ b/branches/tfs-test/nameMetaOper/pom.xml
@@ -23,7 +23,7 @@
 				<version>2.7</version>
 				<configuration>
 					<includes>
-						<include>**/function/nameMetaOper.java</include>
+						<include>**/nameMetaOper.java</include>
 					</includes>
 				</configuration>
 			</plugin>
@@ -60,11 +60,6 @@
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.taobao.gaia</groupId>
-			<artifactId>gaia</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
