add sql and modify configure.ac
git-svn-id: http://code.taobao.org/svn/tfs@1012 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-dev-1.4.2/configure.ac
+++ b/branches/tfs-dev-1.4.2/configure.ac
@@ -167,10 +167,14 @@ AC_FUNC_STAT
 AC_CHECK_FUNCS([fdatasync ftruncate gethostbyname getpagesize gettimeofday memset mkdir munmap rmdir socket strcasecmp strchr strdup strerror strstr strtoul strtoull tzset])
 
 m4_include([ax_lib_mysql.m4])
+
 AX_LIB_MYSQL([5.1.48])
 
 AC_CONFIG_FILES([Makefile
                  conf/Makefile
+                 sql/Makefile
+                 sql/ms/Makefile
+                 sql/rcs/Makefile
                  scripts/Makefile
                  scripts/ha/Makefile
                  src/Makefile
