--- a/branches/tfs-dev-1.4.2/Makefile.am
+++ b/branches/tfs-dev-1.4.2/Makefile.am
@@ -1,12 +1,12 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS = src conf scripts 
+SUBDIRS = src conf scripts  sql
 pkgdata_datadir=${prefix}/logs
 pkgdata_data_DATA=
 
-DIST_SUBDIRS = src conf scripts tests
+DIST_SUBDIRS = src conf scripts tests sql
 EXTRA_DIST=build.sh \
-	   conf/Makefile.am Makefile.am\
+	   conf/Makefile.am Makefile.am sql/Makefile.am\
 	   scripts/Makefile.am scripts/Makefile.in scripts/tfs.sh scripts/stfs.sh \
 	   libtool ax_lib_mysql.m4\
 	   packages/tfs.spec
