--- a/branches/tfs-test/nameMetaOper/metaOper.conf
+++ b/branches/tfs-test/nameMetaOper/metaOper.conf
@@ -1,7 +1,7 @@
 [public]
 threadCount = 1
-operType = 64
-userId = 390
+operType = 1
+userId = 3
 
 [CreateDir]
 autoGenDir = true
@@ -31,7 +31,8 @@ statCount = 100
 
 [SaveLargeFile]
 autoGenDir = true
-localLargeFile = /home/admin/workspace/nameMetaOper/2.1G
+#localLargeFile = /home/admin/workspace/nameMetaOper/2.1G
+localLargeFile = /home/admin/workspace/nameMetaOper/100M
 statCount = 5
 
 [FetchFile]
