--- a/branches/tfs-test/nameMetaOper/pom.xml
+++ b/branches/tfs-test/nameMetaOper/pom.xml
@@ -40,6 +40,11 @@
 	</properties>
 
 	<dependencies>
+    <dependency>                                                                                                                                                       
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
