--- a/branches/tfs-test/merge-rc-dir/pom.xml
+++ b/branches/tfs-test/merge-rc-dir/pom.xml
@@ -67,7 +67,11 @@
 			<artifactId>gaia</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.taobao.common.tfs</groupId>
+			<artifactId>tfs-javaclient</artifactId>
+			<version>2.1.4</version>
+  		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
