--- a/branches/tfs-test/merge-rc-dir/.settings/org.maven.ide.eclipse.prefs
+++ b/branches/tfs-test/merge-rc-dir/.settings/org.maven.ide.eclipse.prefs
@@ -1,7 +1,8 @@
-#Fri Mar 25 11:20:45 CST 2011
-activeProfiles=
+#Mon Nov 28 10:04:37 CST 2011
+activeProfiles=test-tfs
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
+includeModules=false
 resolveWorkspaceProjects=true
 resourceFilterGoals=process-resources resources\:testResources
 skipCompilerPlugin=true
