--- a/branches/stable-2.0/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.0/src/tools/dataserver/Makefile.am
@@ -17,6 +17,7 @@ bin_PROGRAMS = clear_file_system\
                reverse_name\
                modify_super_block\
                tfsping\
+							 test_load\
                view_local_key
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
@@ -54,3 +55,5 @@ view_local_key_SOURCES = view_local_key.cpp
 recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 
 recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
+
+test_load_SOURCES = test_load.cpp
