--- a/branches/tfs-test/V2/pom.xml
+++ b/branches/tfs-test/V2/pom.xml
@@ -1,9 +1,37 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>tfs-test</groupId>
-  <artifactId>tfs-test</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>tfs-test</groupId>
+	<artifactId>tfs-test</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<target>1.5</target>
+					<source>1.5</source>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<includes>
+						<include>**/LoginOperationTest.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -21,9 +49,9 @@
 			<version>2.5.6</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.taobao.common.tfs</groupId>
-  			<artifactId>common-tfs</artifactId>
-  			<version>2.2.5</version>
+			<groupId>com.taobao.common.tfs</groupId>
+			<artifactId>common-tfs</artifactId>
+			<version>2.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -31,9 +59,9 @@
 			<version>5.1.8</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.taobao.common.tfs</groupId>
-  			<artifactId>common-tfs</artifactId>
-  			<version>2.2.5</version>
+			<groupId>com.taobao.common.tfs</groupId>
+			<artifactId>common-tfs</artifactId>
+			<version>2.2.5</version>
 		</dependency>
 	</dependencies>
 </project>
