--- a/branches/tfs-test/V2/pom.xml
+++ b/branches/tfs-test/V2/pom.xml
@@ -59,9 +59,9 @@
 			<version>5.1.8</version>
 		</dependency>
 		<dependency>
-			<groupId>com.taobao.common.tfs</groupId>
-			<artifactId>common-tfs</artifactId>
-			<version>2.2.5</version>
+			<groupId>core-storage</groupId>
+			<artifactId>common-util</artifactId>
+			<version>0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
