modify pom.xml fix mvn build problem
git-svn-id: http://code.taobao.org/svn/tfs@1497 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-test/V2/pom.xml
+++ b/branches/tfs-test/V2/pom.xml
@@ -20,6 +20,9 @@
 				<version>2.7</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
+					<includes>
+						<include>** / *Tests.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
