--- a/branches/stable-2.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.1/src/tools/dataserver/Makefile.am
@@ -14,6 +14,7 @@ bin_PROGRAMS = clear_file_system\
 							 convert_name\
                reload_config\
                read_index_tool\
+               read_block_prefix\
                reverse_name\
                modify_super_block\
                tfsping\
@@ -57,4 +58,5 @@ recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
 
 gen_block_prefix_SOURCES = gen_block_prefix.cpp
+read_block_prefix_SOURCES = read_block_prefix.cpp
 #test_load_SOURCES = test_load.cpp
