[new_feature]  编译时链接库加上tcmalloc see http://rb.corp.taobao.com/r/35490 编译时链接库加上tcmalloc
git-svn-id: http://code.taobao.org/svn/tfs@1549 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.1/configure.ac
+++ b/branches/stable-2.1/configure.ac
@@ -26,6 +26,8 @@ AC_CHECK_LIB([m], [main])
 AC_CHECK_LIB([pthread], [main])
 # FIXME: Replace `main' with a function in `-lrt':
 AC_CHECK_LIB([rt], [main])
+# FIXME: Replace `main' with a function in `-ltcmalloc':
+AC_CHECK_LIB([tcmalloc], [main])
 
 AC_CHECK_LIB([mysqlclient], [main])
 
