--- a/branches/stable-2.1/Makefile.am
+++ b/branches/stable-2.1/Makefile.am
@@ -8,7 +8,7 @@ DIST_SUBDIRS = src conf scripts tests sql
 EXTRA_DIST=build.sh \
 	   conf/Makefile.am Makefile.am sql/Makefile.am\
 	   scripts/Makefile.am scripts/Makefile.in scripts/tfs.sh scripts/stfs.sh scripts/start_sync_log.sh scripts/sync.sh scripts/cs_sync.sh\
-	   libtool ax_lib_mysql.m4\
+	   libtool ax_lib_mysql.m4 tcmalloc.m4\
 	   packages/tfs.spec
 
 TMP_DIR := /tmp/tfs-tmp.$(shell echo $$$$)
