--- a/branches/stable-2.1/configure.ac
+++ b/branches/stable-2.1/configure.ac
@@ -27,7 +27,7 @@ AC_CHECK_LIB([pthread], [main])
 # FIXME: Replace `main' with a function in `-lrt':
 AC_CHECK_LIB([rt], [main])
 # FIXME: Replace `main' with a function in `-ltcmalloc':
-AC_CHECK_LIB([tcmalloc], [main])
+#AC_CHECK_LIB([tcmalloc], [main])
 
 AC_CHECK_LIB([mysqlclient], [main])
 
@@ -185,9 +185,13 @@ AC_TYPE_SIGNAL
 AC_FUNC_STAT
 AC_CHECK_FUNCS([fdatasync ftruncate gethostbyname getpagesize gettimeofday memset mkdir munmap rmdir socket strcasecmp strchr strdup strerror strstr strtoul strtoull tzset])
 
+m4_include([tcmalloc.m4])
+
 m4_include([ax_lib_mysql.m4])
 
 AX_LIB_MYSQL([5.1.48])
+
+TS_CHECK_TCMALLOC
 
 AC_CONFIG_FILES([Makefile
                  conf/Makefile
