add repair used block count tool. http://rb.corp.taobao.com/r/37791/
git-svn-id: http://code.taobao.org/svn/tfs@1602 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.1/src/tools/dataserver/Makefile.am
@@ -19,7 +19,8 @@ bin_PROGRAMS = clear_file_system\
                modify_super_block\
                tfsping\
                view_local_key\
-							 gen_block_prefix
+							 gen_block_prefix\
+							 repair_used_block_count
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -59,4 +60,5 @@ recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
 
 gen_block_prefix_SOURCES = gen_block_prefix.cpp
 read_block_prefix_SOURCES = read_block_prefix.cpp
+repair_used_block_count_SOURCES = repair_used_block_count.cpp
 #test_load_SOURCES = test_load.cpp
