commit tmp source code
git-svn-id: http://code.taobao.org/svn/tfs@1729 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/dataserver/Makefile.am
@@ -14,13 +14,13 @@ LDADD=$(top_builddir)/src/new_client/.libs/libtfsclient.a\
 
 noinst_LIBRARIES = libdataserver.a
 
-DATASERVER_SOURCE_LIST_HEADER=super_block_manager.h physical_blockv2.h\
+DATASERVER_SOURCE_LIST_HEADER=ds_define.h super_block_manager.h physical_blockv2.h\
 physical_block_manager.h index_handlev2.h data_handlev2.h data_file.h\
-logic_blockv2.h
+logic_blockv2.h logic_block_manager.h block_manager.h
 
-DATASERVER_SOURCE_LIST=super_block_manager.cpp physical_blockv2.cpp\
+DATASERVER_SOURCE_LIST=ds_define.cpp super_block_manager.cpp physical_blockv2.cpp\
 physical_block_manager.cpp index_handlev2.cpp data_handlev2.cpp data_file.cpp \
-logic_blockv2.cpp
+logic_blockv2.cpp logic_block_manager.cpp block_manager.cpp
 
 libdataserver_a_SOURCES=$(DATASERVER_SOURCE_LIST) $(DATASERVER_SOURCE_LIST_HEADER)
 
