--- a/branches/tfs-test/V2/pom.xml
+++ b/branches/tfs-test/V2/pom.xml
@@ -21,7 +21,7 @@
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<includes>
-						<include>** / *Tests.java</include>
+						<include>**/*Test.java</include>
 					</includes>
 				</configuration>
 			</plugin>
