--- a/branches/tfs-test/cInterfaceTest/metaTestV2/Makefile
+++ b/branches/tfs-test/cInterfaceTest/metaTestV2/Makefile
@@ -1,8 +1,8 @@
 #dir
 SRC_DIR=.
 OUT_DIR=./out
-TFS_SRC=/home/chenzewei.pt/stable-2.1/src
-TBLIB_ROOT=/home/chenzewei.pt/lib
+TFS_SRC=/home/admin/stable-2.1/src
+TBLIB_ROOT=/home/admin/tbnet/
 SRC=/lib
 
 
@@ -16,9 +16,9 @@ LIBFLAGS=-L${SRC} -L${TFS_SRC}/client/ -L${TFS_SRC}/message/ -L${TFS_SRC}/messag
 LIBS= $(TFS_SRC)/new_client/.libs/libtfsclient.a $(TFS_SRC)/message/libtfsmessage.a $(TFS_SRC)/common/libtfscommon.a $(TBLIB_ROOT)/lib/libtbnet.a $(TBLIB_ROOT)/lib/libtbsys.a -lpthread -lgtest  -lpthread -lrt  -luuid -lz
 
 #relative
-#obj=test_01_create_dir test_02_create_file test_03_rm_dir test_04_rm_file test_05_mv_dir test_06_mv_file test_07_ls_dir test_08_ls_file  test_09_open test_10_read test_11_write test_12_close
+obj=test_01_create_dir test_02_create_file test_03_rm_dir test_04_rm_file test_05_mv_dir test_06_mv_file test_07_ls_dir test_08_ls_file  test_09_open test_10_read test_11_write test_12_close test_13_save_file test_14_save_buf test_15_fetch_file test_16_fetch_buf test_17_exist_file test_18_exist_dir
 
-obj=test_16_fetch_buf
+#obj=test_16_fetch_buf
 
 
 
