--- a/branches/stable-2.1/src/tools/cluster/Makefile.am
+++ b/branches/stable-2.1/src/tools/cluster/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB)
 
-bin_PROGRAMS = sync_by_blk sync_by_log sync_by_file transfer_by_file
+bin_PROGRAMS = sync_by_blk sync_by_log sync_by_file transfer_by_file sync_analyze_tool
 LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(top_builddir)/src/new_client/.libs/libtfsclient.a\
 	$(top_builddir)/src/message/libtfsmessage.a\
@@ -21,3 +21,4 @@ sync_by_log_SOURCES =  sync_by_log.cpp sync_file_base.cpp sync_file_base.h
 sync_by_file_SOURCES =  sync_by_file.cpp sync_file_base.cpp sync_file_base.h
 
 transfer_by_file_SOURCES = transfer_by_file.cpp sync_file_base.h
+sync_analyze_tool_SOURCES = sync_analyze_tool.cpp
