add metaserver configure
git-svn-id: http://code.taobao.org/svn/tfs@1784 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/configure.ac
+++ b/branches/dev_tair_meta_from_2.2.12/configure.ac
@@ -210,6 +210,7 @@ AC_CONFIG_FILES([Makefile
                  src/nameserver/Makefile
                  src/rcserver/Makefile
                  src/name_meta_server/Makefile
+                 src/meta_with_KV/Makefile
                  src/rootserver/Makefile
                  src/checkserver/Makefile
                  src/tools/Makefile
