compleable meta_with_kv
git-svn-id: http://code.taobao.org/svn/tfs@1788 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
@@ -16,7 +16,8 @@ noinst_LIBRARIES=libmetakvserver.a
 
 metakvserver_INCLUDE=meta_kv_service.h
 
-libmetakvserver_a_SOURCES=meta_kv_service.cpp $(metakvserver_INCLUDE)
+libmetakvserver_a_SOURCES=meta_kv_service.cpp meta_info_helper.cpp \
+													tairengine_helper.cpp $(metakvserver_INCLUDE)
 
 bin_PROGRAMS = metakvserver 
 
