add first test case for meta_kv
git-svn-id: http://code.taobao.org/svn/tfs@1797 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
@@ -1,11 +1,9 @@
 AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet \
-						$(MYSQL_CFLAGS)
+						$(TAIR_META_CPPFLAGS)
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid
-
-AM_LDFLAGS+=$(MYSQL_LDFLAGS)
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid $(TAIR_META_LDFLAGS)
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
@@ -16,8 +14,12 @@ noinst_LIBRARIES=libmetakvserver.a
 
 metakvserver_INCLUDE=meta_kv_service.h
 
-libmetakvserver_a_SOURCES=meta_kv_service.cpp meta_info_helper.cpp \
-													tairengine_helper.cpp $(metakvserver_INCLUDE)
+if WITH_KV_META
+tair_kv_source=tairengine_helper.cpp tairengine_helper.h
+endif
+
+libmetakvserver_a_SOURCES=kvengine_helper.cpp meta_kv_service.cpp meta_info_helper.cpp \
+													$(tair_kv_source)  $(metakvserver_INCLUDE)
 
 bin_PROGRAMS = metakvserver 
 
