--- a/branches/dev_tair_meta_from_2.2.12/configure.ac
+++ b/branches/dev_tair_meta_from_2.2.12/configure.ac
@@ -110,6 +110,23 @@ AM_CONDITIONAL([WITH_TAIR_CACHE],[test x$enable_taircache = xyes])
 AC_SUBST([TAIR_CACHE_CPPFLAGS])
 AC_SUBST([TAIR_CACHE_LDFLAGS])
 
+AC_ARG_ENABLE([kvmeta],
+           AS_HELP_STRING([--enable-kvmeta],
+           [enable meta server used kv store(tair), use --with-tair-root to specify path]),
+           [enable_kvmeta=${enableval}],
+           [enable_kvmeta="yes"])
+if test "${enable_kvmeta}" = "yes"; then
+        if ! test -d "${TAIR_ROOT}/include" -a -d "${TBLIB_ROOT}/lib"; then
+                AC_MSG_ERROR([TAIR_ROOT is not work! expect TAIR_ROOT/include and TAIR_ROOT/lib directory])
+                exit 1;
+        fi
+        TAIR_META_CPPFLAGS="-DWITH_TAIR_META -I${TAIR_ROOT}/include"
+        TAIR_META_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz"
+fi
+AM_CONDITIONAL([WITH_KV_META],[test x$enable_kvmeta = xyes])
+AC_SUBST([TAIR_META_CPPFLAGS])
+AC_SUBST([TAIR_META_LDFLAGS])
+
 AC_CACHE_CHECK(if fallocate is implemented, ac_cv_func_fallocate,
   AC_TRY_RUN([
     #include <fcntl.h>
@@ -224,6 +241,7 @@ AC_CONFIG_FILES([Makefile
                  tests/Makefile
                  tests/batch/Makefile
                  tests/rcserver/Makefile
+                 tests/meta_with_KV/Makefile
                  tests/name_meta_server/Makefile
                  tests/common/Makefile
                  tests/rootserver/Makefile
