--- a/branches/dev_tair_meta_from_2.2.12/tests/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/tests/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS=foreign
-SUBDIRS = batch intergrate dataserver common rcserver name_meta_server  rootserver 
+SUBDIRS = batch intergrate dataserver common rcserver meta_with_KV name_meta_server  rootserver 
