[new_feature]  put_meta和get_meta接口实现 see http://rb.corp.taobao.com/r/52125 简单实现put_meta, get_meta接口
git-svn-id: http://code.taobao.org/svn/tfs@1821 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/meta_with_KV/Makefile.am
@@ -21,6 +21,7 @@ endif
 libmetakvserver_a_SOURCES=kvengine_helper.cpp meta_kv_service.cpp meta_info_helper.cpp \
 													$(tair_kv_source)  $(metakvserver_INCLUDE)
 
-bin_PROGRAMS = metakvserver 
+bin_PROGRAMS = metakvserver #tool_client 
 
 metakvserver_SOURCES=$(libmetakvserver_a_SOURCES) main.cpp
+#tool_client_SOURCES=tool_client.cpp
