add a tool for transfer old meta data
git-svn-id: http://code.taobao.org/svn/tfs@1836 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/configure.ac
+++ b/branches/dev_tair_meta_from_2.2.12/configure.ac
@@ -238,6 +238,7 @@ AC_CONFIG_FILES([Makefile
                  src/tools/transfer/Makefile
                  src/tools/mock/Makefile
                  src/tools/cluster/Makefile
+                 src/tools/metaserver/Makefile
                  tests/Makefile
                  tests/batch/Makefile
                  tests/rcserver/Makefile
