--- a/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
@@ -1,12 +1,13 @@
 AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
-            -I$(TBLIB_ROOT)/include/tbnet
+            -I$(TBLIB_ROOT)/include/tbnet\
+						$(MYSQL_CFLAGS)
 
-AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB)
+AM_LDFLAGS=-lrt -lpthread -ldl $(MYSQL_LDFLAGS)
 
 bin_PROGRAMS = meta_transfer
 
-LDADD =	$(top_builddir)/src/new_client/.libs/libtfsclient.a\
+LDADD =	$(top_builddir)/src/name_meta_server/libnamemetaserver.a\
         $(TAIR_CACHE_LDFLAGS) \
 				$(top_builddir)/src/message/libtfsmessage.a\
         $(top_builddir)/src/common/libtfscommon.a\
