pass  compile src\kv_meta_server
git-svn-id: http://code.taobao.org/svn/tfs@1852 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/kv_meta_server/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/kv_meta_server/Makefile.am
@@ -8,7 +8,7 @@ AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid $(TAIR_META_LDFLAGS)
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a\
       $(TBLIB_ROOT)/lib/libtbnet.a \
-      $(TBLIB_ROOT)/lib/libtbsys.a \
+      $(TBLIB_ROOT)/lib/libtbsys.a 
 
 noinst_LIBRARIES=libmetakvserver.a
 
