remove flag -Wno-unused-result.
git-svn-id: http://code.taobao.org/svn/tfs@1983 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_for_outer_users/configure.ac
+++ b/branches/dev_for_outer_users/configure.ac
@@ -147,7 +147,7 @@ AC_ARG_WITH([release],
     [use optimize (default is NO)]),
     [
       if test "$withval" = "yes"; then
-        CXXFLAGS="-O2 -finline-functions -fno-strict-aliasing -Wall -Wno-deprecated -Wno-unused-result -fPIC -D__STDC_LIMIT_MACROS -D_NO_EXCEPTION"
+        CXXFLAGS="-O2 -finline-functions -fno-strict-aliasing -Wall -Wno-deprecated -fPIC -D__STDC_LIMIT_MACROS -D_NO_EXCEPTION"
       fi
     ],
     [CXXFLAGS="-g -D__STDC_LIMIT_MACROS -Wall -Werror -Wextra -Wunused-parameter -Wformat -Wconversion -Wdeprecated "]
