add put_object put_bucket to txt2newmeta.cpp
git-svn-id: http://code.taobao.org/svn/tfs@1984 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
@@ -7,7 +7,8 @@ AM_LDFLAGS=-lrt -lpthread -ldl $(MYSQL_LDFLAGS)
 
 bin_PROGRAMS = meta_transfer txt2new
 
-LDADD =	$(top_builddir)/src/name_meta_server/libnamemetaserver.a\
+LDADD =	$(top_builddir)/src/new_client/.libs/libtfsclient.a \
+				$(top_builddir)/src/name_meta_server/libnamemetaserver.a \
         $(TAIR_CACHE_LDFLAGS) \
 				$(top_builddir)/src/message/libtfsmessage.a\
         $(top_builddir)/src/common/libtfscommon.a\
