add *.h to makefile
git-svn-id: http://code.taobao.org/svn/tfs@2003 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/kv_meta_server/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/kv_meta_server/Makefile.am
@@ -12,7 +12,7 @@ LDADD=$(top_builddir)/src/message/libtfsmessage.a \
 
 noinst_LIBRARIES=libkvmetaserver.a libkvrootserver.a
 
-kvmetaserver_INCLUDE=kv_meta_service.h meta_info_helper.h kv_meta_heart_manager.h
+kvmetaserver_INCLUDE=kvengine_helper.h        kv_meta_server_manager.h  kv_root_server.h    tairengine_helper.h kv_meta_heart_manager.h  kv_meta_service.h         meta_info_helper.h
 
 if WITH_KV_META
 tair_kv_source=tairengine_helper.cpp tairengine_helper.h
