add clientv2 compile support.
git-svn-id: http://code.taobao.org/svn/tfs@2009 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-tmp-trunk/configure.ac
+++ b/branches/tfs-tmp-trunk/configure.ac
@@ -203,6 +203,7 @@ AC_CONFIG_FILES([Makefile
                  src/Makefile
                  src/adminserver/Makefile
                  src/new_client/Makefile
+                 src/clientv2/Makefile
                  src/common/Makefile
                  src/dataserver/Makefile
                  src/message/Makefile
