--- a/branches/tfs-tmp-trunk/src/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/Makefile.am
@@ -1,3 +1,3 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS = common message new_client client_v2 dataserver nameserver adminserver tools rcserver monitor name_meta_server rootserver
+SUBDIRS = common message new_client clientv2 dataserver nameserver adminserver tools rcserver monitor name_meta_server rootserver
