[new_feature]  修改Makefile.am，修改打印日志 see http://rb.corp.taobao.com/r/58863 [feature] 1.修改Makefile.am，修改打印日志 2.NS在计算BLOCK是否满时，BLOCK已使用量需要加上保留的空间后再计算
git-svn-id: http://code.taobao.org/svn/tfs@2178 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-tmp-trunk/src/clientv2/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/clientv2/Makefile.am
@@ -7,7 +7,7 @@ AM_LDFLAGS=-lrt -lpthread -ldl -luuid
 lib_LTLIBRARIES= libtfsclientv2.la 
 
 api_source_list = tfs_client_api_v2.cpp tfs_client_impl_v2.cpp tfs_file.cpp fsname.cpp \
-									tfs_client_api_v2.h tfs_client_impl_v2.h tfs_file.h fsname.h
+									tfs_client_api_v2.h tfs_client_impl_v2.h tfs_file.h fsname.h encode.h
 
 ld_fg = $(AM_LDFLAGS) \
         $(top_srcdir)/src/message/libtfsmessage.a \
