http://rb.corp.taobao.com/r/59755/
git-svn-id: http://code.taobao.org/svn/tfs@2221 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
+++ b/branches/dev_tair_meta_from_2.2.12/src/tools/metaserver/Makefile.am
@@ -6,7 +6,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lz -lrt -lpthread -ldl $(READLINE_LIB) -luuid 
 
-bin_PROGRAMS = meta_transfer txt2new check_old_new sync_nginx2kv go_tair_for_kv
+bin_PROGRAMS = meta_transfer txt2new check_old_new sync_nginx2kv go_tair_for_kv del_from_tair
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/new_client/.libs/libtfsclient.a \
@@ -22,4 +22,4 @@ txt2new_SOURCES = txt2newmeta.cpp
 check_old_new_SOURCES = check_old_new.cpp
 sync_nginx2kv_SOURCES = sync_nginx2kv.cpp
 go_tair_for_kv_SOURCES = go_tair_for_kv.cpp
-
+del_from_tair_SOURCES = del_from_tair.cpp
