modify cluster sync process. see http://rb.corp.taobao.com/r/61931/
git-svn-id: http://code.taobao.org/svn/tfs@2279 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/tfs-tmp-trunk/src/tools/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/tools/dataserver/Makefile.am
@@ -13,7 +13,8 @@ bin_PROGRAMS = clear_file_system\
 							 convert_name\
                reload_config\
                reverse_name\
-               tfsping
+               tfsping\
+							 test_file_queue
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -52,4 +53,6 @@ recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
 
 gen_block_prefix_SOURCES = gen_block_prefix.cpp
+
+test_file_queue_SOURCES = test_file_queue.cpp
 #test_load_SOURCES = test_load.cpp
