--- a/branches/tfs-tmp-trunk/src/tools/dataserver/Makefile.am
+++ b/branches/tfs-tmp-trunk/src/tools/dataserver/Makefile.am
@@ -13,8 +13,7 @@ bin_PROGRAMS = clear_file_system\
 							 convert_name\
                reload_config\
                reverse_name\
-               tfsping\
-							 test_file_queue
+               tfsping
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -38,7 +37,7 @@ tfsping_SOURCES = tfsping.cpp
 
 ds_client_SOURCES = ds_client.cpp
 
-modify_super_block_SOURCES = modify_super_block.cpp
+#modify_super_block_SOURCES = modify_super_block.cpp
 
 reverse_name_SOURCES = reverse_name.cpp
 
@@ -46,13 +45,12 @@ format_file_system_SOURCES = format_file_system.cpp
 
 read_index_tool_SOURCES = read_index_tool.cpp
 
-view_local_key_SOURCES = view_local_key.cpp
+#view_local_key_SOURCES = view_local_key.cpp
 
-recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
+#recover_disk_data_to_cluster_SOURCES = recover_disk_data_to_cluster.cpp
 
-recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
+#recover_sync_file_queue_SOURCES = recover_sync_file_queue.cpp
 
-gen_block_prefix_SOURCES = gen_block_prefix.cpp
+#gen_block_prefix_SOURCES = gen_block_prefix.cpp
 
-test_file_queue_SOURCES = test_file_queue.cpp
 #test_load_SOURCES = test_load.cpp
